--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,10 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/META-INF/spring/security-context.xml</param-value>
+		<param-value>
+            classpath:/META-INF/spring/global-context.xml,
+            classpath:/META-INF/spring/security-context.xml
+       </param-value>
 	</context-param> 
 	
 	<servlet>
