set solr loggin to warn

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -6,13 +6,14 @@
 # FINER
 # FINEST (lowest value) 
 
-myreader.level = WARN
+myreader.level=WARNING
 myreader.PurgerJob.level=INFO
-myreader.fetcher.level=ERROR
-collector.level =ERROR
+myreader.fetcher.level=WARNING
+collector.level=WARNING
 org.springframework.level = OFF
-#WARNING
+org.apche.solr.level=WARNING
 org.hibernate.level = OFF
+
 handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 
 java.util.logging.ConsoleHandler.level=FINEST
