--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -11,7 +11,7 @@ myreader.PurgerJob.level=INFO
 myreader.fetcher.level=WARNING
 collector.level=WARNING
 org.springframework.level = OFF
-org.apche.solr.level=WARNING
+org.apache.solr.level=WARNING
 org.hibernate.level = OFF
 
 handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
