--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</reporting>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.2.1.RELEASE</spring.version>
+		<spring.version>3.2.8.RELEASE</spring.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -281,5 +281,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.5.0.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
