--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,26 @@
             classpath:/META-INF/spring/global-context.xml,
             classpath:/META-INF/spring/security-context.xml
        </param-value>
-	</context-param> 
-	
+	</context-param>
+
+    <servlet>
+        <servlet-name>api-2-servlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>
+                myreader.resource.ResourceConfig
+            </param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
 	<servlet>
 		<servlet-name>app-servlet</servlet-name>
 	   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -25,11 +43,16 @@
     	</init-param>
     	<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>app-servlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>api-2-servlet</servlet-name>
+        <url-pattern>/api/2/*</url-pattern>
+    </servlet-mapping>
 	
 	<filter>
 	  <filter-name>springSecurityFilterChain</filter-name>
