--- a/pom.xml
+++ b/pom.xml
@@ -337,5 +337,11 @@
             <version>0.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+            <version>1.1.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
