--- a/pom.xml
+++ b/pom.xml
@@ -343,5 +343,10 @@
             <version>1.1.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.3.1.Final</version>
+        </dependency>
     </dependencies>
 </project>
