--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                     </check>
                     <formats>
                         <format>xml</format>
+                        <format>html</format>
                     </formats>
                 </configuration>
 			</plugin>
