--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
      - secure: "YyiHfr7a+XCUfCh6Q1zWGpqh1GnD7fKdfd7qjy0PMpFSRBE46dQ8pSnSQLJVE84qh6i8y8/DQNF15+lrIEgKqkKuH/sD8qw+g1vmgKCjUDgQOqCWB9b22AERRuEmWR7e2FIHL+cha71APkjW3Dj7XArZ8Sgs3uolyqQ4kJIK/6M="
      - secure: "JtnyHbSxUQhkcS4qZFjsKyr2PzstpEDoQ9ILxLR0SeAhfznGluliGhcqpN6BzvaFHz0aY1C5KU/U/nXPdK9xtz+uS4yXtxmkZ6YTi7KhNfgzQpuxlZsFEbPDDSxmtLZGpD6LpitH/A0anYiqQDOz4m7vqgh3314MEChV6ybC4LE="
 
-script: mvn test
+script: mvn cobertura:cobertura
 after_success: 
- - mvn cobertura:cobertura coveralls:cobertura
+ - mvn coveralls:cobertura
  - if [[ $TRAVIS_BRANCH == "master" && $TRAVIS_JDK_VERSION == "openjdk7" && $TRAVIS_PULL_REQUEST == "false" ]]; then mvn package; curl -X PUT -T target/myreader.war -u travis:$PW --insecure "https://$DEPLOY_HOST/manager/deploy?update=true&path=/myreader"; fi
