travis ci: updated curl command

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ env:
 script: mvn test
 after_success: 
  - if [[ $TRAVIS_JDK_VERSION == "openjdk7" ]]; then mvn cobertura:cobertura coveralls:cobertura; fi
- - if [[ $TRAVIS_BRANCH == "master" && $TRAVIS_JDK_VERSION == "openjdk7" && $TRAVIS_PULL_REQUEST == "false" ]]; then mvn package -DskipTests;  echo "deploying artefact"; curl -X PUT -T target/myreader.war -u travis:$PW --cacert cacert-root.crt "https://$DEPLOY_HOST/manager/deploy?update=true&path=/myreader"; echo "deploy result $?"; fi
+ - if [[ $TRAVIS_BRANCH == "master" && $TRAVIS_JDK_VERSION == "openjdk7" && $TRAVIS_PULL_REQUEST == "false" ]]; then mvn package -DskipTests;  echo "deploying artefact"; curl --upload-file target/myreader.war -u travis:$PW --cacert cacert-root.crt "https://$DEPLOY_HOST/manager/text/deploy?update=true&path=/myreader"; echo "deploy result $?"; fi
