--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/collector_prod
+spring.datasource.url=jdbc:mysql://localhost/collector_prod?useUnicode=true&amp;characterEncoding=utf8
 spring.datasource.username=collector_prod
 spring.datasource.password=collector_prod
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,3 +8,4 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 server.context-path=/myreader
 server.port=9340
+server.address=127.0.0.1
