added ajp connector

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 server.context-path=/myreader
 server.port=9340
+custom.server.ajp.port=19340
 server.address=127.0.0.1
