--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 server.context-path=/myreader
 server.port=9340
-custom.server.ajp.port=19340
+custom.server.http.port=19340
 server.address=127.0.0.1
+
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-alias=myreader
+server.ssl.key-store-password=myreader
