travis ci: added apt-get install sshpass

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
      - secure: "QRmvPoRaFbgK+VZr+x3U93t8sYUk7erZxv3sC3EA/feekDb6Y7VLcj7Fmov88SvxJA3iNpc+o/5JVbwwfP15QHC9kUHr674gkz/tQ9K+T3Snd4xl7WMbYv02tmJeXfS7Y2Xyh2vUhsVId1/z3I8gDeAa5tuGq5uhAML21XvBVL8="
 
 before_install:
-  - sudo apt-get install rpm
+  - sudo apt-get install rpm sshpass
 script: if [[ $TRAVIS_JDK_VERSION == "openjdk7" ]]; then mvn cobertura:cobertura coveralls:cobertura; else mvn test; fi
 after_success:
  - if [[ $TRAVIS_BRANCH == "master" && $TRAVIS_JDK_VERSION == "openjdk7" && $TRAVIS_PULL_REQUEST == "false" ]]; then mvn package -DskipTests; echo "deploying artefact"; sshpass -p "$PW" scp -o StrictHostKeyChecking=no -P2323 target/rpm/myreader/RPMS/noarch/*.rpm travis@$DEPLOY_HOST:/var/www/html/rpm/myreader/; echo "deploy result $?"; fi
