travis ci: optimizing test execution time

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ jdk:
   - openjdk7
   - oraclejdk8
 
-script: mvn test
+script: if [[ $TRAVIS_JDK_VERSION != "oraclejdk8" ]]; mvn test; fi
 after_success:
- - echo "current branch $TRAVIS_BRANCH on jdk version $TRAVIS_JDK_VERSION"
- - if [[ $TRAVIS_BRANCH == "master" && $TRAVIS_JDK_VERSION == "openjdk7" ]]; then mvn cobertura:cobertura coveralls:cobertura; fi
+ - if [[ $TRAVIS_JDK_VERSION == "oraclejdk8" ]]; then mvn cobertura:cobertura coveralls:cobertura; fi
