--- a/pom.xml
+++ b/pom.xml
@@ -324,5 +324,22 @@
             <version>1.4.01</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.jawr.extensions</groupId>
+            <artifactId>jawr-spring-extension</artifactId>
+            <version>3.6</version>
+        </dependency>
+
+        <!-- frontend libraries -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angularjs</artifactId>
+            <version>1.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-ui-router</artifactId>
+            <version>0.2.13</version>
+        </dependency>
     </dependencies>
 </project>
