--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
+spring.jpa.properties.hibernate.search.default.indexBase=data/index
+spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
+
 server.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
