--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
         <!-- frontend libraries -->
         <dependency>
             <groupId>org.webjars</groupId>
