--- a/pom.xml
+++ b/pom.xml
@@ -327,17 +327,27 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angularjs</artifactId>
-            <version>1.3.6</version>
+            <version>1.3.15</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angular-ui-router</artifactId>
-            <version>0.2.13</version>
+            <version>0.2.14</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>ui-router-extras</artifactId>
             <version>0.0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-material</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-local-storage</artifactId>
+            <version>0.1.5</version>
         </dependency>
     </dependencies>
 </project>
