--- a/pom.xml
+++ b/pom.xml
@@ -266,10 +266,11 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.21</version>
         </dependency>
+        <dependency><groupId>org.apache.httpcomponents</groupId><artifactId>httpclient</artifactId><version>4.4.1</version></dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test-mvc-htmlunit</artifactId>
-            <version>1.0.0.M1</version>
+            <groupId>org.springframework.test.htmlunit</groupId>
+            <artifactId>spring-test-htmlunit</artifactId>
+            <version>1.0.0.RC1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -299,9 +300,9 @@
             <version>3.7</version>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -316,7 +317,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.1</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
