--- a/pom.xml
+++ b/pom.xml
@@ -266,22 +266,18 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.21</version>
         </dependency>
-        <dependency><groupId>org.apache.httpcomponents</groupId><artifactId>httpclient</artifactId><version>4.4.1</version></dependency>
+        <!-- obsolete with Spring Boot 1.2.5.RELEASE or higher -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.test.htmlunit</groupId>
             <artifactId>spring-test-htmlunit</artifactId>
             <version>1.0.0.RC1</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-web</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-webmvc</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
