--- a/pom.xml
+++ b/pom.xml
@@ -351,5 +351,10 @@
             <artifactId>angular-cache</artifactId>
             <version>4.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>momentjs</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 </project>
