--- a/pom.xml
+++ b/pom.xml
@@ -346,5 +346,10 @@
             <artifactId>momentjs</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-hotkeys</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 </project>
