--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "karma-junit-reporter": "~0.2.2",
     "karma-ng-json2js-preprocessor": "~0.1.1",
     "karma-ng-scenario": "~0.1.0",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-coverage": "~0.4.2"
   }
 }
