--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,12 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>1.57</version>
+            <scope>test</scope>
+        </dependency>
         <!-- frontend libraries -->
         <dependency>
             <groupId>org.webjars</groupId>
