updated location for hsql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:hsqldb:data/myreader.db
+spring.datasource.url=jdbc:hsqldb:data/hsql/myreader.db
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
