fixed column definitions for entity attributes with long text

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:hsqldb:data/hsql/myreader.db
+spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.default_table_type=cached;hsqldb.defrag_limit=2;hsqldb.nio_data_file=false
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
