housekeeping Spring Boot 1.3.M3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-spring.jpa.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
 spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
 server.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
+
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
