set spring.mandatory-file-encoding to UTF-8

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.defa
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.mandatory-file-encoding=UTF-8
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
