upgraded to Jasmine 2

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "karma": "0.12.17",
-    "karma-jasmine": "~0.1.5",
+    "karma-jasmine": "0.3.6",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma-junit-reporter": "~0.2.2",
     "karma-ng-json2js-preprocessor": "~0.1.1",
