[skip ci] travis.yml update

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: java
 jdk:
   - oraclejdk8
 
-after_success:
+script:
    - if [[ $TRAVIS_JDK_VERSION == "oraclejdk8" ]]; then ./gradlew cobertura coveralls -i; else ./gradlew test -i; fi
