removed Maven Repository repo.spring.io/libs-release and repo.spring.io/libs-release. removed org.springframework.test.htmlunit::spring-test-htmlunit dependency (merged into Spring Test 4.2)

--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,10 @@ wrapper.gradleVersion = '2.6'
 
 buildscript {
     ext.springBootVersion = '1.3.0.RELEASE'
-    ext.springRepo = 'http://repo.spring.io/libs-release'
-    ext.springRepoMilestone = 'http://repo.spring.io/libs-release'
+
 
     repositories {
-        maven { url springRepo }
-        maven { url springRepoMilestone }
+        mavenCentral()
     }
 
     dependencies {
@@ -41,7 +39,7 @@ configure(javaProjects) {
     sourceCompatibility = vJavaLang
 
     repositories {
-        maven { url springRepo }
+        mavenCentral()
     }
 
     // Ensure that all Gradle-compiled classes are available to Eclipse's
