--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -18,8 +18,6 @@ jar {
 
 repositories {
     mavenCentral()
-    maven { url "https://repo.spring.io/libs-milestone" }
-    maven { url "http://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
@@ -52,7 +50,7 @@ dependencies {
     testCompile group: 'com.jayway.jsonpath', name: 'json-path', version: '0.8.1'
     testCompile group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '0.8.1'
     testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '1.1.5'
-    testCompile group: 'org.springframework.test.htmlunit', name: 'spring-test-htmlunit', version: '1.0.0.RC1'
+    testCompile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.21'
     testCompile group: 'xml-apis', name: 'xml-apis', version: '1.4.01'
     testCompile(group: 'com.github.tomakehurst', name: 'wiremock', version: '1.57') {
         exclude(module: 'servlet-api')
