added Hystrix configuration

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -20,3 +20,12 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
+
+# 1 minute timeout
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+
+# 30 minutes
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=1800000
+
+# open circuit when one requests fail
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=1
