--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ cache:
     - $HOME/myreader/myreader-frontend/node_modules/
 
 after_success:
-- ./gradlew cobertura coveralls
+- ./gradlew jacocoTestReport coveralls
